highlight http request

--- a/preview-src/index.adoc
+++ b/preview-src/index.adoc
@@ -1,10 +1,29 @@
-= Hardware and Software Requirements
+= Hardware and Software Requirements haha
 Author Name
 :idprefix:
 :idseparator: -
 :!example-caption:
 :!table-caption:
 :page-pagination:
+
+
+[source,http,options="nowrap"]
+----
+HTTP/1.1 200 OK
+Content-Type: application/json
+Content-Length: 264
+
+{
+  "transactions" : [ {
+    "id" : "a96c08ad-69bd-478c-af4a-346f731f9e34",
+    "bankAccount" : "2901719070/2010",
+    "dateOfTransaction" : "2021-01-05",
+    "note" : "befeleme",
+    "variableSymbol" : "28429201",
+    "payerIdentification" : "TestPayment"
+  } ]
+}
+----
 
 image:multirepo-ssg.svg[Multirepo SSG,200,float=right]
 Platonem complectitur mediocritatem ea eos.
